Fix clipped author-image in post header

--- a/css/main.sass
+++ b/css/main.sass
@@ -289,7 +289,6 @@ body
       height: 30px
       line-height: 30px
       margin-right: 8px
-      margin-bottom: -10px
       float: left
       background-size: cover
       border-radius: 100%
@@ -337,7 +336,6 @@ body
       height: 30px
       line-height: 30px
       margin-right: 8px
-      margin-bottom: -10px
       float: left
       background-size: cover
       border-radius: 100%
